--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 <script>
 let intervalId = null; // タイマーIDを格納する変数
 let lastPosition = null; // 前回の位置情報を保存する変数
+let lastSpeed = null;
+
+function calculateBearing(lat1, lon1, lat2, lon2) {
+    const φ1 = lat1 * Math.PI / 180;
+    const φ2 = lat2 * Math.PI / 180;
+    const Δλ = (lon2 - lon1) * Math.PI / 180;
+
+    const y = Math.sin(Δλ) * Math.cos(φ2);
+    const x = Math.cos(φ1) * Math.sin(φ2) -
+              Math.sin(φ1) * Math.cos(φ2) * Math.cos(Δλ);
+    const θ = Math.atan2(y, x);
+    const bearing = (θ * 180 / Math.PI + 360) % 360;
+
+    return bearing;
+}
+
 
 // 2点間の距離をメートル単位で計算する関数（ハバーサイン公式）
 function calculateDistance(lat1, lon1, lat2, lon2) {
@@ -63,6 +79,9 @@ function displayLocation(position) {
     let calculatedSpeed = "未計算（初回取得）";
     let distanceTraveled = "未計算";
     let timeDiff = "未計算";
+    let speedChange = "初回取得";
+    let speedDifference = 0;
+    let bearing = "未計算";
     
     // 前回の位置情報がある場合は距離と速度を計算
     if (lastPosition) {
@@ -87,17 +106,41 @@ function displayLocation(position) {
         distanceTraveled = `${distance.toFixed(2)} m`;
         timeDiff = `${timeElapsed.toFixed(2)} 秒`;
         calculatedSpeed = `${speed.toFixed(2)} m/s (${speedKmh.toFixed(2)} km/h)`;
+
+        if (lastSpeed !== null) {
+            speedChange = speed > lastSpeed ? "UP" : "DOWN";
+            speedDifference = Math.abs(speed - lastSpeed);
+        }
+
+        console.log("速度変化:", speedChange);
+        console.log("速度差分:", speedDifference.toFixed(2), "m/s");
+
+        lastSpeed = speed;
+
+        if (lastPosition) {
+            bearing = calculateBearing(
+                lastPosition.coords.latitude,
+                lastPosition.coords.longitude,
+                position.coords.latitude,
+                position.coords.longitude
+            );
+        console.log("移動方位:", bearing.toFixed(2), "度");
+}
+
     }
 
     // 位置情報を取得して文字列を生成
     const geo_text = `
-        緯度: ${position.coords.latitude}, 
-        経度: ${position.coords.longitude}, 
-        位置精度: ${position.coords.accuracy}, 
+        緯度: ${position.coords.latitude.toFixed(2)}, 
+        経度: ${position.coords.longitude.toFixed(2)}, 
+        位置精度: ${position.coords.accuracy.toFixed(2)}, 
         時刻: ${formattedDate}
         距離: ${distanceTraveled},
         経過時間: ${timeDiff},
-        速度: ${calculatedSpeed}
+        速度: ${calculatedSpeed},
+        速度変化: ${speedChange},
+        速度差分: ${speedDifference.toFixed(2)} m/s,
+        移動方位: ${bearing !== "未計算" ? bearing.toFixed(2) + "度" : bearing}
     `;
 
     // ページ上に表示
